--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,6 +1,23 @@
-<div *ngFor="let item of cvs; let i=index">
+<!-- <div *ngFor="let item of cvs; let i=index">
   <p (click)="getCvDetails(item)">CV {{i+1}}</p>
 </div>
+ -->
 
 
+
+<h1>List of CVs</h1>
+<div *ngFor="let item of cvs; let i=index" class="card mb-3" style="width: 600px; height: 100px; margin-top: 30px; ">
+  <div class="row g-0">
+    <div  class="col-md-4">
+      <img src="{{item.path}}"  style="width: 100px; height: 98px;">
+    </div>
+    <div class="col-md-8 ">
+      <div class="card-body d-flex justify-content-between">
+        <h5 class="card-title"> {{item.firstName}} {{item.name}}</h5>
+        <button class="btn btn-outline-info" (click)="getCvDetails(item)"> Details</button>
+       
+      </div>
+    </div>
+  </div>
+</div>
 <app-detail [retreivedCV]="selectedCV"></app-detail>
